add role for the register

--- a/apigateway/Dockerfile
+++ b/apigateway/Dockerfile
@@ -2,17 +2,16 @@ FROM ubuntu:22.04
 
 RUN apt-get -y update
 RUN apt-get -y upgrade
-RUN apt-get install -y sqlite3 libsqlite3-dev 
 RUN apt-get install -y python3-pip
 
-WORKDIR /authen-service
+WORKDIR /apigateway
 
 COPY requirements.txt .
 
 RUN pip3 install -r requirements.txt
 
-COPY . /authen-service
+COPY . /apigateway
 
-EXPOSE 5001
+EXPOSE 5000
 
 CMD ["python3", "app.py"]
