--- a/apigateway/docker-compose.yml
+++ b/apigateway/docker-compose.yml
@@ -1,15 +1,15 @@
-version: '3.9'
+version: '4.0'
 
 services:
   authen-service:
     restart: always
-    container_name: authen-service
+    container_name: apigateway
     build:
       context: .
       dockerfile: Dockerfile
     env_file:
       - .env
     ports:
-      - 127.0.0.1:5001:5001
+      - 127.0.0.1:5000:5000
     volumes:
-      - .:/authen_service
+      - .:/apigateway
